# proxynexus-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
proxynexus-cli/: Cargo.toml
proxynexus-cli/src/: main.rs
proxynexus-core/: Cargo.toml
proxynexus-core/data/: netrunnerdb_cards.json
proxynexus-core/src/: border_generator.rs  card_db.rs  card_query.rs  card_source.rs  card_store.rs  catalog.rs  collection.rs  collection_builder.rs  collection_manager.rs  db_schema.rs  db_storage.rs  error.rs  image_provider.rs  image_scanner.rs  lib.rs  local_image_provider.rs  models.rs  mpc.rs  netrunnerdb.rs  pdf.rs  print_prep.rs  query.rs
proxynexus-core/src/db/: app_schema.rs  collection_schema.rs  mod.rs
proxynexus-core/src/games/: mod.rs
proxynexus-core/src/games/l5r/: api.rs  catalog.rs  mod.rs  models.rs  schema.rs
proxynexus-gui/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
proxynexus-gui/assets/: icon.icns  tailwind.css
proxynexus-gui/public/: blog.html  init.sql  instructions.html
proxynexus-gui/src/: analytics.rs  export.rs  main.rs
proxynexus-gui/src/components/: about_modal.rs  card_list_input.rs  export_controls.rs  mod.rs  preview_grid.rs  print_layout_info.rs  source_selector.rs  variant_selector.rs
utils/corner_infill/: README.md  corner_infill.py  pyproject.toml
utils/nsg_page_slicer/: README.md  nsg_page_slicer.py  pyproject.toml
