[package]
name = "proxynexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
krilla = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
chrono = "0.4.43"
zip = "8.1.0"
toml = "1.0.1"
dirs = "6.0.0"
tempfile = "3.24.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
turbojpeg = { version = "1.4.0", features = ["image"] }
serde_json = "1.0.149"
turso = "0.4.4"
