[package]
name = "proxynexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
krilla = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
zip = "8.1.0"
toml = "1.0.1"
reqwest = { version = "0.13.2", features = ["json"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
serde_json = "1.0.149"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
turbojpeg = { version = "1.4.0", features = ["image"] }
turso = "0.5.0-pre.18"
walkdir = "2.5.0"
chrono = "0.4.43"
tempfile = "3.24.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
turso = { version = "0.5.0-pre.18", default-features = false }
jpeg-encoder = "0.7.0"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }
