[package]
name = "proxynexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
krilla = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
zip = "8.2.0"
toml = "1.0.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0.149"
gluesql = { version = "0.19.0", default-features = false }
gluesql_memory_storage = "0.19.0"
web-time = "1.1.0"
tracing = "0.1"
deunicode = "1.6.2"
jpeg-encoder = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.37", features = ["time", "rt"] }
gluesql_sled_storage = "0.19.0"
walkdir = "2.5.0"
chrono = "0.4.43"
tempfile = "3.25.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.7.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }
