[project]
name = "corner-infill"
version = "0.1.0"
description = "A utility that uses opencv to fill in the blank white corners of physical card scans."
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
